deixando pagina de erro dinâmica

--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,3 +1,18 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<%- include("compartilhado/topo") %>
+  <!-- Begin Page Content -->
+  <div class="container-fluid">
+    <!-- 404 Error Text -->
+    <div class="text-center">
+      <div class="error mx-auto" data-text="404">
+        <%= error.status %>
+      </div>
+      <p class="lead text-gray-800 mb-5">
+        <%= message %>
+      </p>
+      <p class="text-gray-500 mb-0">
+        <%= error.stack %>
+      </p>
+      <a href="index.html">&larr; Back to Dashboard</a>
+    </div>
+  </div>
+  <%- include("compartilhado/rodape") %>
